<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.bpdiagnostics.fragments.SignInFragment">


    <android.support.v7.widget.CardView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/m_dimen">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/m_dimen"
                android:paddingTop="@dimen/m_dimen"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/m_dimen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/m_dimen"
                android:paddingTop="@dimen/m_dimen"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/m_dimen" />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:padding="@dimen/m_dimen">


                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/sign_in" />


                <Button
                    android:id="@+id/button_registration"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/registration" />

            </GridLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
